--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write --plugin-search-dir=. ."
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.4.4",
@@ -23,6 +24,8 @@
     "eslint": "^8.15.0",
     "eslint-config-next": "^12.1.6",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.2"
   }
