--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.4.4",
-    "ethers": "^5.0.0",
+    "connectkit": "^0.0.1",
+    "ethers": "^5.6.9",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "swr": "^1.3.0",
-    "wagmi": "^0.5.3"
+    "wagmi": "^0.6.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
