--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "swr": "^1.3.0",
+    "use-debounce": "^8.0.4",
     "wagmi": "^0.6.3"
   },
   "devDependencies": {
