--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.2",
     "@rainbow-me/rainbowkit": "^0.4.4",
     "connectkit": "^0.0.1",
     "ethers": "^5.6.9",
