--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.2",
     "@rainbow-me/rainbowkit": "^0.4.4",
+    "@tanstack/react-table": "^8.5.11",
     "connectkit": "^0.0.1",
     "ethers": "^5.6.9",
     "next": "^12.1.6",
