--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@heroicons/react": "^2.0.10",
     "@mui/material": "^5.10.2",
     "@rainbow-me/rainbowkit": "^0.4.4",
     "@tanstack/react-table": "^8.5.11",
