--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
     "@mui/material": "^5.10.2",
     "@tanstack/react-table": "^8.5.11",
