--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connectkit": "^0.0.2",
     "ethers": "^5.6.9",
     "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
