--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.10",
     "@mui/material": "^5.10.2",
     "@tanstack/react-table": "^8.5.13",
+    "@thanpolas/univ3prices": "^3.0.2",
     "connectkit": "^0.0.2",
     "ethers": "^5.6.9",
     "graphql": "^16.6.0",
