--- a/apps/landing/.gitignore
+++ b/apps/landing/.gitignore
@@ -26,15 +26,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-
-.turbo
+next-env.d.ts
