--- a/package.json
+++ b/package.json
@@ -1,45 +1,24 @@
 {
   "name": "compounder.fi",
+  "version": "0.0.0",
   "private": true,
-  "version": "0.1.0",
+  "workspaces": [
+    "apps/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write --plugin-search-dir=. ."
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@headlessui/react": "^1.7.3",
-    "@heroicons/react": "^2.0.11",
-    "@mui/material": "^5.10.11",
-    "@tanstack/react-table": "^8.5.15",
-    "@thanpolas/univ3prices": "^3.0.2",
-    "connectkit": "^0.0.2",
-    "ethers": "^5.7.1",
-    "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0",
-    "next": "^13.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "swr": "^1.3.0",
-    "use-debounce": "^8.0.4",
-    "wagmi": "^0.6.8"
+    "build": "turbo run build",
+    "dev": "turbo run dev --parallel",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@types/node": "^18.11.5",
-    "@types/react": "^18.0.23",
-    "@uniswap/sdk-core": "^3.1.0",
-    "@uniswap/v3-sdk": "^3.9.0",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.26.0",
-    "eslint-config-next": "^13.0.0",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.6",
-    "typescript": "^4.8.4"
-  }
+    "eslint-config-custom": "*",
+    "prettier": "latest",
+    "turbo": "latest"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "dependencies": {},
+  "packageManager": "npm@8.19.2"
 }
