--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@compounder.fi/landing",
-  "private": true,
+  "name": "landing",
   "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -21,7 +22,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   }
 }
