--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.12"
+  },
   "packageManager": "npm@8.19.2"
 }
