--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.12"
-  },
+  "dependencies": {},
   "packageManager": "npm@8.19.2"
 }
