--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -24,6 +24,7 @@
     "next": "^13.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "s-ago": "^2.2.0",
     "swr": "^1.3.0",
     "use-debounce": "^8.0.4",
     "wagmi": "^0.8.0"
