--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "packageManager": "npm@8.19.2"
+  "packageManager": "npm@8.19.2",
+  "dependencies": {
+    "react-select": "^5.7.2"
+  }
 }
